# images4web

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
images4web/: folder.py  settings.py  syncronize.py  test.py  test_syncronize.py
images4web/classes/: folder.py  syncronize.py
images4web/settings/: parameters.py
src/: main.py  requirements.txt
src/images4web/: compress.py  settings.py  syncronize.py
tests/: test_syncronize.py
