[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "images4web"
version = "0.0.1"
authors = [
  { name="Riccardo Ferrara", email="riccardo85@gmail.com" },
]
description = "From a input folder containing images, it compress images for the web: it creates (and sycronize continuously) an output folder with the compressed images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/riccardoferrara/images4web"
"Bug Tracker" = "https://github.com/riccardoferrara/images4web/issues"